--- a/index.html
+++ b/index.html
@@ -86,48 +86,59 @@
           </div>
         </div>
         <div class="image">
-          <img src="assets/img/coffe (3).jpg" alt="" />
+          <img src="assets/img/menu/ippng.png" alt="" />
         </div>
       </div>
+      
+<div class="garis"></div>
     </section>
+    <hr>
 
     <!-- Home Section End -->
 
     <!-- About Section Start -->
     <section class="about" id="about">
-      <h1 class="heading"><span>tentang</span> kami</h1>
+      <h3>Features</h3>
+      <h1>What I Do</h1>
 
-      <div
-        class="row glass"
-        style="border: 2px solid rgba(238, 238, 238, 0.438)"
-      >
-        <div class="image">
-          <img src="assets/img/tentang-kami.jpg" alt="coffe espresso" />
+      <div class="row ">
+        <div class="card">
+          <i class="fas fa-bars"></i>
+          <h2>Business Stratagy</h2>
+          <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
         </div>
-
-        <div class="content">
-          <h3>what makes our coffe spesial?</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Reiciendis, explicabo! Voluptatum autem architecto omnis. Saepe
-            fugit nulla accusantium eos neque.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-            similique officia deserunt corporis, in totam, aliquid tempore
-            itaque impedit ut dolore adipisci. At deleniti quas consequatur
-            harum error voluptate rerum.
-          </p>
-          <a href="" class="btn">learn more</a>
+        <div class="card">
+          <i class="fas fa-bars"></i>
+          <h2>Business Stratagy</h2>
+          <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+        </div>
+        <div class="card">
+          <i class="fas fa-bars"></i>
+          <h2>Business Stratagy</h2>
+          <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+        </div>
+        <div class="card">
+          <i class="fas fa-bars"></i>
+          <h2>Business Stratagy</h2>
+          <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+        </div>
+        <div class="card">
+          <i class="fas fa-bars"></i>
+          <h2>Business Stratagy</h2>
+          <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+        </div>
+        <div class="card">
+          <i class="fas fa-bars"></i>
+          <h2>Business Stratagy</h2>
+          <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
         </div>
       </div>
     </section>
     <!-- About Section End -->
-
     <!-- Menu Section Start -->
     <section class="menu" id="menu">
-      <h1 class="heading">Menu <span>Kami</span></h1>
-
+      <h3>Visit my portfolio and keep your feedback</h3>
+      <h1>My Portfolio</h1>
       <div class="box-container">
         <div class="box">
           <img src="assets/img/menu/americano.jpg" alt="americano coffee" />
@@ -174,7 +185,7 @@
       </div>
     </section>
     <!-- Menu Section End -->
-
+<span class="garis"></span>
     <!-- Products Section Start -->
     <section class="products" id="products">
       <h1 class="heading">our <span>products</span></h1>
