--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/grid.css" />
     <link rel="stylesheet" href="assets/css/header.css" />
-
+    <link rel="stylesheet" href="assets/css/coba.css" />
     <!-- Boostrap Css  -->
     <!-- My Font Awesome -->
     <link
@@ -61,8 +61,8 @@
         </P>
         <nav class="navbar2">
           <a href="#home">Home</a>
-          <a href="#about">Features</a>
-          <a href="#menu">Portfolio</a>
+          <a href="#features">Features</a>
+          <a href="#portfolio">Portfolio</a>
           <a href="#products">Resume</a>
           <a href="#review">Clients</a>
           <a href="#contact">Pricing</a>
@@ -128,90 +128,114 @@
     <!-- Home Section End -->
 
     <!-- About Section Start -->
-    <section class="about" id="about">
+    <section class="features" id="features">
       <h3>Features</h3>
       <h1>What I Do</h1>
 
       <div class="row ">
         <div class="card">
-          <i class="fas fa-bars"></i>
-          <h2>Business Stratagy</h2>
-          <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+          <div class="hover">
+            <i class="fas fa-bars"></i>
+            <h2>Business Stratagy</h2>
+            <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+            <span style="display: none;">ahsdfasdafa</span>
+          </div>
         </div>
         <div class="card">
-          <i class="fas fa-bars"></i>
-          <h2>Business Stratagy</h2>
-          <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+          <div class="hover">
+            <i class="fas fa-bars"></i>
+            <h2>Business Stratagy</h2>
+            <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+            <span style="display: none;">ahsdfasdafa</span>
+          </div>
         </div>
         <div class="card">
-          <i class="fas fa-bars"></i>
-          <h2>Business Stratagy</h2>
-          <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+          <div class="hover">
+            <i class="fas fa-bars"></i>
+            <h2>Business Stratagy</h2>
+            <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+            <span style="display: none;">ahsdfasdafa</span>
+          </div>
         </div>
         <div class="card">
-          <i class="fas fa-bars"></i>
-          <h2>Business Stratagy</h2>
-          <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+          <div class="hover">
+            <i class="fas fa-bars"></i>
+            <h2>Business Stratagy</h2>
+            <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+            <span style="display: none;">ahsdfasdafa</span>
+          </div>
         </div>
         <div class="card">
-          <i class="fas fa-bars"></i>
-          <h2>Business Stratagy</h2>
-          <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+          <div class="hover">
+            <i class="fas fa-bars"></i>
+            <h2>Business Stratagy</h2>
+            <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+            <span style="display: none;">ahsdfasdafa</span>
+          </div>
         </div>
         <div class="card">
-          <i class="fas fa-bars"></i>
-          <h2>Business Stratagy</h2>
-          <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+          <div class="hover">
+            <i class="fas fa-bars"></i>
+            <h2>Business Stratagy</h2>
+            <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
+            <span style="display: none;">ahsdfasdafa</span>
+          </div>
         </div>
       </div>
     </section>
     <!-- About Section End -->
-    <!-- Menu Section Start -->
-    <section class="menu" id="menu">
+    <!-- portfolio Section Start -->
+    <section class="portfolio" id="portfolio">
       <h3>Visit my portfolio and keep your feedback</h3>
       <h1>My Portfolio</h1>
       <div class="box-container">
         <div class="box">
-          <img src="assets/img/menu/americano.jpg" alt="americano coffee" />
-          <h3>americano coffee</h3>
-          <div class="price">IDR 293K <span>IDR 393k</span></div>
-          <a href="" class="btn">add to cart</a>
+        <img src="assets/img/portfolio/portfolio-02.jpg.png" alt="">
+          <div class="title">
+            <span>Web Design</span>
+            <span style="color: white;"><i class="fa fa-heart-o"></i>690</span>
+          </div>
+          <p class="desc">App for tecnology & services</p>
         </div>
         <div class="box">
-          <img src="assets/img/menu/cappucino.jpg" alt="cappucino coffee" />
-          <h3>cappucino coffee</h3>
-          <div class="price">IDR 293K <span>IDR 393k</span></div>
-          <a href="" class="btn">add to cart</a>
+        <img src="assets/img/portfolio/portfolio-02.jpg.png" alt="">
+          <div class="title">
+            <span>Web Design</span>
+            <span style="color: white;"><i class="fa fa-heart-o"></i>690</span>
+          </div>
+          <p class="desc">App for tecnology & services</p>
         </div>
         <div class="box">
-          <img
-            src="assets/img/menu/cold brew coffee.jpg"
-            alt="americano coffee"
-          />
-          <h3>cold brew coffee</h3>
-          <div class="price">IDR 293K <span>IDR 393k</span></div>
-          <a href="" class="btn">add to cart</a>
+        <img src="assets/img/portfolio/portfolio-02.jpg.png" alt="">
+          <div class="title">
+            <span>Web Design</span>
+            <span style="color: white;"><i class="fa fa-heart-o"></i>690</span>
+          </div>
+          <p class="desc">App for tecnology & services</p>
         </div>
         <div class="box">
-          <img
-            src="assets/img/menu//espresso coffe.jpg"
-            alt="espresso coffee"
-          />
-          <h3>espresso coffee</h3>
-          <div class="price">IDR 293K <span>IDR 393k</span></div>
-          <a href="" class="btn">add to cart</a>
+        <img src="assets/img/portfolio/portfolio-02.jpg.png" alt="">
+          <div class="title">
+            <span>Web Design</span>
+            <span style="color: white;"><i class="fa fa-heart-o"></i>690</span>
+          </div>
+          <p class="desc">App for tecnology & services</p>
         </div>
         <div class="box">
-          <img src="assets/img/menu/frappé coffe.jpg" alt="americano coffee" />
-          <h3>frappé Coffee</h3>
-          <div class="price">IDR 293K <span>IDR 393k</span></div>
-          <a href="" class="btn">add to cart</a>
+        <img src="assets/img/portfolio/portfolio-02.jpg.png" alt="">
+          <div class="title">
+            <span>Web Design</span>
+            <span style="color: white;"><i class="fa fa-heart-o"></i>690</span>
+          </div>
+          <p class="desc">App for tecnology & services</p>
         </div>
         <div class="box">
-          <img src="assets/img/menu/latte coffe.jpg" alt="americano coffee" />
-          <h3>latte Coffee</h3>
-          <div class="price">IDR 293K <span>IDR 393k</span></div>
-          <a href="" class="btn">add to cart</a>
+        <img src="assets/img/portfolio/portfolio-02.jpg.png" alt="">
+          <div class="title">
+            <span>Web Design</span>
+            <span style="color: white;"><i class="fa fa-heart-o"></i>690</span>
+          </div>
+          <p class="desc">App for tecnology & services</p>
         </div>
       </div>
     </section>
