--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
       <nav class="navbar">
         <a class="scroll-link" href="#home">Home</a>
-        <a class="scroll-link" href="#about">Features</a>
-        <a class="scroll-link" href="#menu">Portfolio</a>
-        <a class="scroll-link" href="#products">Resume</a>
-        <a class="scroll-link" href="#review">Clients</a>
-        <a class="scroll-link" href="#contact">Pricing</a>
+        <a class="scroll-link" href="#features">Features</a>
+        <a class="scroll-link" href="#portfolio">Portfolio</a>
+        <a class="scroll-link" href="#resume">Resume</a>
+        <a class="scroll-link" href="#client">Clients</a>
+        <a class="scroll-link" href="#pricing">Pricing</a>
         <a class="scroll-link" href="#blogs">Blog</a>
-        <a class="scroll-link" href="#blogs">Contact</a>
+        <a class="scroll-link" href="#contact">Contact</a>
         <button href="#blogs" class="login">Login</button>
       </nav>
 
@@ -168,7 +168,7 @@
         <div class="card">
           <div class="hover">
             <i class="fas fa-bars"></i>
-            <h2>Business Stratagy</h2>
+            <h2>Business Stratagy </h2>
             <p>I throw myself down among the tall grass by the stream as I lie close to the earth.</p>
             <span style="display: none;">ahsdfasdafa</span>
           </div>
@@ -182,8 +182,9 @@
           </div>
         </div>
       </div>
+      <div class="garis"></div>
     </section>
-    <!-- About Section End -->
+    <!-- Features Section End -->
     <!-- portfolio Section Start -->
     <section class="portfolio" id="portfolio">
       <h3>Visit my portfolio and keep your feedback</h3>
@@ -193,7 +194,7 @@
         <img src="assets/img/portfolio/portfolio-02.jpg.png" alt="">
           <div class="title">
             <span>Web Design</span>
-            <span style="color: white;"><i class="fa fa-heart-o"></i>690</span>
+            <span style="color: white;"> <i class="fa-regular fa-heart"></i>690</span>
           </div>
           <p class="desc">App for tecnology & services</p>
         </div>
@@ -201,7 +202,7 @@
         <img src="assets/img/portfolio/portfolio-02.jpg.png" alt="">
           <div class="title">
             <span>Web Design</span>
-            <span style="color: white;"><i class="fa fa-heart-o"></i>690</span>
+            <span style="color: white;"> <i class="fa-regular fa-heart"></i>690</span>
           </div>
           <p class="desc">App for tecnology & services</p>
         </div>
@@ -209,7 +210,7 @@
         <img src="assets/img/portfolio/portfolio-02.jpg.png" alt="">
           <div class="title">
             <span>Web Design</span>
-            <span style="color: white;"><i class="fa fa-heart-o"></i>690</span>
+            <span style="color: white;"> <i class="fa-regular fa-heart"></i>690</span>
           </div>
           <p class="desc">App for tecnology & services</p>
         </div>
@@ -217,7 +218,7 @@
         <img src="assets/img/portfolio/portfolio-02.jpg.png" alt="">
           <div class="title">
             <span>Web Design</span>
-            <span style="color: white;"><i class="fa fa-heart-o"></i>690</span>
+            <span style="color: white;"> <i class="fa-regular fa-heart"></i>690</span>
           </div>
           <p class="desc">App for tecnology & services</p>
         </div>
@@ -225,7 +226,7 @@
         <img src="assets/img/portfolio/portfolio-02.jpg.png" alt="">
           <div class="title">
             <span>Web Design</span>
-            <span style="color: white;"><i class="fa fa-heart-o"></i>690</span>
+            <span style="color: white;"> <i class="fa-regular fa-heart"></i>690</span>
           </div>
           <p class="desc">App for tecnology & services</p>
         </div>
@@ -233,18 +234,33 @@
         <img src="assets/img/portfolio/portfolio-02.jpg.png" alt="">
           <div class="title">
             <span>Web Design</span>
-            <span style="color: white;"><i class="fa fa-heart-o"></i>690</span>
+            <span style="color: white;"><i class="fa-regular fa-heart"></i>690</span>
           </div>
           <p class="desc">App for tecnology & services</p>
         </div>
       </div>
+      <div class="garis"></div>
     </section>
     <!-- Menu Section End -->
-<span class="garis"></span>
     <!-- Products Section Start -->
-    <section class="products" id="products">
-      <h1 class="heading">our <span>products</span></h1>
-
+    <section class="resume" id="resume">
+      <h3>7+ YEARS OF EXPERIENCE</h3>
+      <h1>My Resume</h1>
+      <ul class="nav-link">
+        <li class="nav-item">
+          <a href="">Education</a>
+        </li>
+        <li class="nav-item">
+          <a href="">Professional Skills</a>
+        </li>
+        <li class="nav-item">
+          <a href="">Experience
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="">Interview</a>
+        </li>
+      </ul>
       <div class="box-container">
         <div class="box">
           <div class="icons">
